<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/week_detail"
                style="@style/TextviewBigBlack.NoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="WW"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/day_month_year_detail"
                style="@style/TextviewBigBlack.NoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/week_detail"
                android:text="DD-MMM-YEAR"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hour_detail"
                style="@style/TextviewBigBlack.NoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/day_month_year_detail"
                android:text="HH:MM"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icon_detail"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/main_detail"
                    style="@style/TextviewBigBlack.NoBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rain" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            style="@style/TextviewBigBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/details_divider"
            android:textStyle="italic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/TextviewSmallGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/t_max" />

            <TextView
                android:id="@+id/temperature_max_detail"
                style="@style/TextviewBigBlack.NoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                android:layout_toEndOf="@+id/textView"
                android:layout_toRightOf="@+id/textView"
                android:text="CC" />

            <TextView
                android:id="@+id/textView5"
                style="@style/TextviewSmallGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/temperature_max_detail"
                android:text="@string/t_min" />

            <TextView
                android:id="@+id/temperature_min_detail"
                style="@style/TextviewBigBlack.NoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/temperature_max_detail"
                android:layout_alignStart="@+id/temperature_max_detail"
                android:layout_below="@+id/temperature_max_detail"
                android:text="CC" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextviewSmallGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/wind_speed" />


            <TextView
                android:id="@+id/textView2"
                style="@style/TextviewSmallGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="end"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/humiditi_detail"
                style="@style/TextviewBigBlack.NoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView3"
                android:layout_alignEnd="@+id/wind_detail"
                android:layout_alignRight="@+id/wind_detail"
                android:layout_gravity="end"
                android:text="H" />

            <TextView
                android:id="@+id/wind_detail"
                style="@style/TextviewBigBlack.NoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/wind_direction_detail"
                android:layout_alignStart="@+id/wind_direction_detail"
                android:layout_below="@+id/humiditi_detail"
                android:layout_gravity="end"
                android:text="S" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextviewSmallGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/wind_angle" />

            <TextView
                android:id="@+id/wind_direction_detail"
                style="@style/TextviewBigBlack.NoBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_gravity="end"
                android:layout_marginLeft="29dp"
                android:layout_marginStart="29dp"
                android:layout_toEndOf="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:text="A" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>